--- a/index.html
+++ b/index.html
@@ -1,35 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="script.js" defer></script>
-  <link rel="stylesheet" href="style.css">
-  <title>Password Generator</title>
-</head>
-<body>
-  <div class="container">
-    <h1 class="title">Password Generator</h1>
-    <h3 class="password-display" id="passwordDisplay">password</h3>
-    <form id="passwordGeneratorForm" class="form">
-      <label for="characterAmountNumber">Number Of Characters</label>
-      <div class="character-amount-container">
-        <input type="range" min="1" max="50" value="25" id="characterAmountRange">
-        <input class="number-input" type="number" min="1" max="50" value="25" id="characterAmountNumber">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
+    <title>Password Generator</title>
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="title">Password Generator</h1>
+      <div class="password-display">
+        <h3 class="passwordArea" id="passwordDisplay">Password</h3>
+        <button type="button" class="copyBtn" id="copy"><img src="copy.png" alt="copy"></button>
+
       </div>
+      <form id="passwordGeneratorForm" class="form">
+        <label for="characterAmountNumber">Number Of Characters</label>
+        <div class="character-amount-container">
+          <input
+            type="range"
+            min="1"
+            max="50"
+            value="25"
+            id="characterAmountRange"
+          />
+          <input
+            class="number-input"
+            type="number"
+            min="1"
+            max="50"
+            value="25"
+            id="characterAmountNumber"
+          />
+        </div>
 
-      <label for="includeUppercase">Include Uppercase</label>
-      <input type="checkbox" id="includeUppercase">
+        <label for="includeUppercase">Include Uppercase</label>
+        <input type="checkbox" id="includeUppercase" />
 
-      <label for="includeNumbers">Include Numbers</label>
-      <input type="checkbox" id="includeNumbers">
+        <label for="includeNumbers">Include Numbers</label>
+        <input type="checkbox" id="includeNumbers" />
 
-      <label for="includeSymbols">Include Symbols</label>
-      <input type="checkbox" id="includeSymbols">
+        <label for="includeSymbols">Include Symbols</label>
+        <input type="checkbox" id="includeSymbols" />
 
-      <button type="submit" class="btn">Generate Password</button>
-    </form>
-  </div>
-</body>
+        <button type="submit" class="btn">Generate Password</button>
+      </form>
+    </div>
+  </body>
 </html>
